Accelerate generated JSON ASCII string writes